# BookOfRecipes

./: README.md  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: f7bd20fcec19_create_tables.py
src/: main.py  sett_data.py
src/database/: create_db.py
src/database/models/: PhotoRecipe.py  Recipes.py  User.py
